# JS

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
server/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
server/src/: server.py
server/src/nlpserver/: comments_extraction_c.scm  comments_extraction_python.py  comments_extraction_python.scm  convert.py  create_venv.py  events.py  inference_with_langchain.py  predict_variables.py  server.py  treesitter.py  variable_conventions.py
server/src/utils/: check_dependencies.py  check_system_python.py  create_venv.py  includes.py  install_dependencies.py
server/test/: __init__.py  server_test.py
server/tests/: test_variable_conventions.py
server/tests/text_documents/: c_document.c  python_document.py
src/: extension.ts
