[metadata]
name =nlpserver,
version= file: src/nlpserver/VERSION
authors=
    name="Nirjal Bhurtel", email="",
    name="Sangam Ghimire", email="",
    name="Jenisha Khulal", email="",
    name="Bishal Neupane", email="",
    name="Nigam Niraula", email=""

description="Not an ordinary NLP server.",
long_description = file: README.md, LICENSE,
python_requires = ">=3.7"
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-V3 License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
python_requires = >=3.7
install_requires =
    pygls

[options.entry_points]
console_scripts =
    executable-name = nlpserver.server:start

# [options.packages.find]
# exclude =
#     examples*
#     tools*
#     docs*