[metadata]
name = nlpserver
version = file: src/nlpserver/VERSION

authors =
    name = "Nirjal Bhurtel", email =" ",
    name = "Sangam Ghimire", email =" ",
    name = "Jenisha Khulal", email =" ",
    name = "Bishal Neupane", email =" ",
    name = "Nigam Niraula", email =" "

description = "Not an ordinary NLP server.",
long_description = file: README.md, LICENSE,
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-V3 License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires = file: ./requirements.txt
package_dir = 
    = src
packages=find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = nlpserver.server:start
